--- a/sgtsic-libs/sgtsic-libs-utils-front/pom.xml
+++ b/sgtsic-libs/sgtsic-libs-utils-front/pom.xml
@@ -7,8 +7,8 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-  <groupId>es.caib.sgtsic.utils</groupId>
-  <artifactId>sgtsic-libs-utils</artifactId>
+  <groupId>es.caib.sgtsic</groupId>
+  <artifactId>sgtsic-libs-utils-front</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
