--- a/sgtsic-libs/sgtsic-libs-utils-api/pom.xml
+++ b/sgtsic-libs/sgtsic-libs-utils-api/pom.xml
@@ -1,90 +1,90 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>es.caib.sgtsic</groupId>
-		<artifactId>sgtsic-libs</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>es.caib.sgtsic</groupId>
+        <artifactId>sgtsic-libs</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-  <groupId>es.caib.sgtsic</groupId>
-  <artifactId>sgtsic-libs-utils-api</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>es.caib.sgtsic</groupId>
+    <artifactId>sgtsic-libs-utils-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <licenses>
-       <license>
-           <name>Apache License, Version 2.0</name>
-           <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-           <distribution>repo</distribution>
-       </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	<name>sgtsic-libs-utils-api</name>
-	<description>Módulo api de SGTSIC libs</description>
-	<properties>
-		<version.template.file>../scripts/templates/Version.java.template</version.template.file>
-		<version.file>src/main/java/es/caib/sgtsic-libs/Version.java</version.file>
-		<maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
-	</properties>
-	<dependencies>
-		 <dependency>
-					<groupId>es.caib.sgtsic</groupId>
-					<artifactId>sgtsic-libs-utils</artifactId>
-					<version>${project.version}</version>
-					<scope>provided</scope>
-			</dependency>
-		 <dependency>
-					<groupId>es.caib.sgtsic</groupId>
-					<artifactId>sgtsic-libs-utils-ejb</artifactId>
-					<version>${project.version}</version>
-					<scope>provided</scope>
-			</dependency>
-			<dependency>
-					<groupId>javax.servlet</groupId>
-					<artifactId>servlet-api</artifactId>
-					<version>2.5</version>
-			</dependency>
-			<!-- Swagger -->
-			<dependency>
-					<groupId>io.swagger</groupId>
-					<artifactId>swagger-jersey-jaxrs</artifactId>
-					<version>1.5.0</version>
-					<exclusions>
-							<exclusion>
-									<groupId>org.slf4j</groupId>
-									<artifactId>slf4j-jdk14</artifactId>
-							</exclusion>
-							<exclusion>
-									<groupId>org.slf4j</groupId>
-									<artifactId>slf4j-api</artifactId>
-							</exclusion>
-					</exclusions>
-			</dependency>
-			<dependency>
-					<groupId>com.sun.jersey</groupId>
-					<artifactId>jersey-json</artifactId>
-					<version>1.13</version>
-					<exclusions>
-							<exclusion>
-									<groupId>*</groupId>
-									<artifactId>*</artifactId>
-							</exclusion>
-					</exclusions>
-			</dependency>
-	</dependencies>
-	<build>
-		<finalName>sgtsic-libs-utils-api-${project.version}</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <name>sgtsic-libs-utils-api</name>
+    <description>Módulo api de SGTSIC libs</description>
+    <properties>
+        <version.template.file>../scripts/templates/Version.java.template</version.template.file>
+        <version.file>src/main/java/es/caib/sgtsic-libs/Version.java</version.file>
+        <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>es.caib.sgtsic</groupId>
+            <artifactId>sgtsic-libs-utils</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>es.caib.sgtsic</groupId>
+            <artifactId>sgtsic-libs-utils-ejb</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <!-- Swagger -->
+        <!--dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jersey-jaxrs</artifactId>
+            <version>1.5.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-jdk14</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.13</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency-->
+    </dependencies>
+    <build>
+        <finalName>sgtsic-libs-utils-api-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
