--- a/sgtsic-libs/sgtsic-libs-utils-back/pom.xml
+++ b/sgtsic-libs/sgtsic-libs-utils-back/pom.xml
@@ -91,6 +91,13 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+                <dependency>
+                    <groupId>apache-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                    <version>1.1.0.jboss</version>
+                    <type>jar</type>
+                    <scope>provided</scope>
+                </dependency>
 	</dependencies>
 	<build>
 		<finalName>sgtsic-libs-utils-back-${project.version}</finalName>
